--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,2 @@
 <h1>Smaple App</h1>
-<p>This is he home page for the <a href="http://www.railstutorial.org/">Ruby onRails Tutorial</a> sample application.</p>
+<p>This is the home page for the <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a> sample application.</p>
