--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>About | Ruby on Rails tutorial sample app</title>
+    <title>About | Ruby on Rails Tutorial sample app</title>
   </head>
   <body>
 
