--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Help | Ruby on Rails Tutorial sample app</title>
+    <title>Help | Ruby on Rails Tutorial Sample App</title>
   </head>
   <body>
     <h1>Help!</h1>
