--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Home | Ruby on Rails Tutorial sample app</title>
+    <title>Home | Ruby on Rails Tutorial Sample App</title>
   </head>
   <body>
     <h1>Smaple App</h1>
