--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>About | Ruby on Rails Tutorial Sample App</title>
-  </head>
-  <body>
-
-    <h1>About</h1>
+<% provide(:title, "About") %>
+    <h1><%= yield(:title) %></h1>
     <p>
       The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
       Tutorial</em></a> is a
@@ -16,6 +9,3 @@
       <a href="http://rubyonrails.org/">Ruby on Rails</a>.
       This is the sample application for the tutorial.
     </p>
-
-  </body>
-</html>
