--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Help | Ruby on Rails Tutorial Sample App</title>
-  </head>
-  <body>
-    <h1>Help!</h1>
+<% provide(:title, "Help") %>
+    <h1><%= yield(:title) %></h1>
     <p>
     Get help on the <b>Ruby</b> on Rails tutorial at the <a href="http://www.railstutorial.org/help">Rails Tutorial help page</a>.
     To get help on this sample app, see the <a href="http://www.railstutorial.org/book"><em>Ruby on Rails tutorial</em> book</a>.
     </p>
-  </body>
-</html>
