--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Home | Ruby on Rails Tutorial Sample App</title>
-  </head>
-  <body>
-    <h1>Smaple App</h1>
+<% provide(:title, "Home") %>
+    <h1><%= yield(:title) %></h1>
     <p>This is the home page for the <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a> sample application.</p>
-
-  </body>
-</html>
