--- a/app/views/static_pages/test.html.erb
+++ b/app/views/static_pages/test.html.erb
@@ -3,3 +3,10 @@
     Get help on the <b>Ruby</b> on Rails tutorial at the <a href="http://www.railstutorial.org/help">Rails Tutorial help page</a>.
     To get help on this sample app, see the <a href="http://www.railstutorial.org/book"><em>Ruby on Rails tutorial</em> book</a>.
     </p>
+    <h2>Testing</h2>
+    <p>
+<%= @code  %><br>
+<%= @racecar %><br>
+<%= @a %><br>
+<%= @s %><br>
+    </p>
