--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+// mixins and variables
+$gray-medium-light: #eaeaea;
+
+//universal
+
 body {
   padding-top: 60px;
   min-height: 100%;
@@ -17,10 +22,9 @@ textarea {
 
 .center {
   text-align: center;
-}
-
-.center h1 {
-  margin-bottom: 10px;
+    h1 {
+      margin-bottom: 10px;
+    }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -40,7 +44,7 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #777;
+  color: $gray-light;
 }
 
 p {
@@ -57,11 +61,10 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
-}
-
-.logo:hover {
-  color: #bbb;
-  text-decoration: underline;
+  &:hover {
+    color: #bbb;
+    text-decoration: underline;
+  }
 }
 
 img {
@@ -73,31 +76,26 @@ img {
 footer {
   margin-top: 0px;
   padding-top: 5px;
-  border-top: 1px solid #eaeaea;
-  color: #777;
+  border-top: 1px solid $gray-medium-light;
+  color: $gray-light;
   position: absolute;
   bottom: 0;
   width: inherit;
-}
-
-footer a {
-  color: #555;
-}
-
-footer a:hover {
-  color: #222;
-}
-
-footer small {
-  float: left;
-}
-
-footer ul {
-  float: right;
-  list-style: none;
-}
-
-footer ul li {
-  float: left;
-  margin-left: 15px;
+  a {
+    color: $gray;
+    &:hover {
+      color: $gray-darker;
+    }
+  }
+  small {
+    float: left;
+  }
+  ul {
+    float: right;
+    list-style: none;
+    li {
+      float: left;
+      margin-left: 15px;
+    }
+  }
 }
