--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title><%= full_title(yield(:title)) %></title>
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <%= render 'layouts/shim' %>
-</head>
-
+  <head>
+    <title><%= full_title(yield(:title)) %></title>
+    <link rel="icon" type="image/png" href="https://cdn1.iconfinder.com/data/icons/cash-coin-essentials-colored/48/JD-01-512.png">
+    <%= render 'layouts/rails_default' %>
+    <%= render 'layouts/shim' %>
+  </head>
   <body>
     <%= render 'layouts/header' %>
     <%= yield %>
