--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,4 +9,4 @@
 
 <%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
 
-<%# <%= image_tag("cat.jpeg", alt: "Obligatory necessary cat picture") %>
+<%= image_tag("cat.jpeg", alt: "Obligatory necessary cat picture") %>
