--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,14 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-    <%= yield %>
-    <%= render 'layouts/footer' %>
-    <%= debug(params) if Rails.env.development? %>
+    <div class="container">
+      <% flash.each do |msg_type, msg| %>
+        <div class="alert alert-<%= msg_type %>" >
+          <%= msg %>
+        </div>
+      <%= yield %>
+      <%= debug(params) if Rails.env.development? %>
+      <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
