Obligtory cats added

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,6 +7,6 @@
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
+<%= link_to image_tag("https://upload.wikimedia.org/wikipedia/commons/1/16/Ruby_on_Rails-logo.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
 
-<%= image_tag("cat.jpeg", alt: "Obligatory necessary cat picture") %>
+<%= image_tag("https://www.purina.com.au/-/media/E6EDBEC8D61240E384E78A11E20645D2.ashx", alt: "Obligatory necessary cat picture") %>
