--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,5 @@
 @import "bootstrap-sprockets";
-@import "bootstrap";
+//@import "bootstrap";
 
 // mixins and variables
 $gray-medium-light: #eaeaea;
