--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide :title, 'Sign up' %>
-<% provide :button_text, 'Create my account' %>
+<% provide :title, 'Edit profile' %>
+<% provide :button_text, 'Save profile' %>
 
 <h1><%= yield(:title) %></h1>
 
