--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,11 +2,10 @@
 
 <h1>  <%= yield :title %>  </h1>
 
+<%= will_paginate %>
+
 <ul class="users">
-  <% @users.each do |u| %>
-    <li>
-      <%= gravatar_for u, size: 50 %>
-      <%= link_to u.name, u %>
-    </li>
-  <% end %>
+  <%= render @users %>
 </ul>
+
+<%= will_paginate %>
