--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,19 @@
-<h1>User#password_reset</h1>
+<h1>Sample App</h1>
+
+<p>Hi <%= @user.name %>, </p>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
+We have received the information that you have forgotten your password. Again. We are really busy and on top of that we have to handle your forgetfulness. Do you even know how hard is to take care of all these features? Next time write the password on your keyboard!
 </p>
+
+<p>Anyway, here is your password reset token. Enjoy your miserable existence, pathetic mortal.</p>
+
+<%= link_to "Click here!", edit_password_reset_url(@user.reset_token, email: @user.email) %>
+
+<p>This link will expire in two hours. Hurry up, so the turtle can make it to the water!</p>
+
+<p>If, by any case, you did not request a password reset, then our database is hacked and your credit card is stolen. We sincerely hope you did not have much cash on that account.
+</p>
+
+<p>Best regards / Mit freundlichen Gruessen / Saludas cordiales / Pozdrawiam</p>
+<p>Your always helpful Sample App Team</p>
