--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,15 @@
       </h1>
     </section>
   </aside>
+  <div class="col-md-8">
+    <% if @user.microposts.any? %>
+      <h3>Microposts (<%= @user.microposts.count %>) </h3>
+      <ol class="microposts">
+        <%= render @micrposts %>
+      </ol>
+      <%= will_paginate @microposts %>
+    <% else %>
+      <h3> <%= @user.name %> has no microposts.</h3>
+    <% end %>
+  </div>
 </div>
