--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -3,18 +3,18 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user, url: password_reset_url(params[:id])) do |f| %>
-      <%= render 'shared/error_messages' %>
+    <%= form_for(@user, url: password_reset_url(params[:id])) do |form| %>
+      <%= render 'shared/error_messages', object: form.object %>
 
       <%= hidden_field_tag :email, @user.email %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+      <%= form.label :password %>
+      <%= form.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
+      <%= form.label :password_confirmation %>
+      <%= form.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Update password", class: "btn btn-primary" %>
+      <%= form.submit "Update password", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
