--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,4 @@
-<div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
-
-  <h2>
-    This is the home page for the <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a> sample application.
-  </h2>
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-</div>
+<%= render logged_in? ? 'static_pages/logged_in' : 'static_pages/not_logged_in' %>
 
 <%= link_to image_tag("https://upload.wikimedia.org/wikipedia/commons/1/16/Ruby_on_Rails-logo.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
 
