--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,16 +1,16 @@
-<%= form_for(@user) do |f| %>
-<%= render 'shared/error_messages' %>
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form_control' %>
+<%= form_for(@user) do |form| %>
+<%= render 'shared/error_messages', object: form.object %>
+      <%= form.label :name %>
+      <%= form.text_field :name, class: 'form_control' %>
 
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form_control' %>
+      <%= form.label :email %>
+      <%= form.email_field :email, class: 'form_control' %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form_control' %>
+      <%= form.label :password %>
+      <%= form.password_field :password, class: 'form_control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form_control' %>
+      <%= form.label :password_confirmation, "Confirmation" %>
+      <%= form.password_field :password_confirmation, class: 'form_control' %>
 
-      <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+      <%= form.submit yield(:button_text), class: "btn btn-primary" %>
     <% end %>
