--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -5,3 +5,12 @@
   </div>
   <%= form.submit "Post", class: "btn btn-primary" %>
 <% end %>
+
+<!-- <script type="text/javascript">
+  $('#micropost_picture').bind('change', function() {
+    var size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5 MB, please choose a smaller file.')
+    }
+  });
+</script> -->
