--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,3 +1,3 @@
-<%= form_for(current_user.active_relationships.find_by(followed_id: @user.id), html: {method: :delete}) do |form| %>
+<%= form_for(current_user.active_relationships.find_by(followed_id: @user.id), html: {method: :delete}, remote: true) do |form| %>
   <%= form.submit "Unfollow", class: "btn" %>
 <% end %>
